fix: wrap tech stack icons on mobile about page

--- a/src/pages/about/index.css
+++ b/src/pages/about/index.css
@@ -211,6 +211,7 @@
 
 .about_detail_entry_icons {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .about_detail_entry_icon_box {
